--- a/backend/index.html
+++ b/backend/index.html
@@ -13,10 +13,10 @@
       <input type="text" id="lname" name="lname">
 	  <input type="submit">
     </form>
-	
-	
+
+
 	Get User
-	
+
 	<form name="getForm" class="" action="javascript:getUser()" method="post">
       <label for="fname">UserId:</label><br>
       <input type="text" id="userNumber" name="userNumber"><br>
@@ -27,24 +27,24 @@
 
 
 <script type="text/javascript">
-	
+
 
 	function getUser() {
 		var formElements = document.forms['getForm'].elements
-		var url = "https://alex-json-server.herokuapp.com/User/" + formElements['userNumber'].value;
+		var url = "https://json-server-4351.herokuapp.com/User/" + formElements['userNumber'].value;
 		var xhr = new XMLHttpRequest();
 		xhr.open("GET", url);
 		xhr.setRequestHeader("Accept", "application/json");
 		xhr.setRequestHeader("Content-Type", "application/json");
-		
+
 		xhr.onreadystatechange = function () {
 		if (xhr.readyState === 4) {
 			console.log(xhr.status);
 			console.log(xhr.responseText);
 		}};
-		
-		
-		
+
+
+
 		var data = {
 		  "userNumber": formElements['userNumber'].value
 		}
@@ -57,24 +57,24 @@
 </script>
 
 <script type="text/javascript">
-	var url = "https://alex-json-server.herokuapp.com/User/";
+	var url = "https://json-server-4351.herokuapp.com/User/";
 
 	function postUser() {
 		var formElements = document.forms['registrationForm'].elements
-		
+
 		var xhr = new XMLHttpRequest();
 		xhr.open("POST", url);
 		xhr.setRequestHeader("Accept", "application/json");
 		xhr.setRequestHeader("Content-Type", "application/json");
-		
+
 		xhr.onreadystatechange = function () {
 		if (xhr.readyState === 4) {
 			console.log(xhr.status);
 			console.log(xhr.responseText);
 		}};
-		
-		
-		
+
+
+
 		var data = {
   "billingAddress": "string",
   "dinerNumber": 0,
