--- a/client/registration.html
+++ b/client/registration.html
@@ -17,7 +17,9 @@
             
             <input type="password" placeholder="Confirm Password" name="confirm" id="confirm" required>
 
-            <input type="text" placeholder="Full Name" name="fullname" id="fullname" required>
+            <input type="text" placeholder = "First Name" name="fname" id="fname" required>
+
+            <input type="text" placeholder = "Last Name" name = "lname" id = "lname" required>
 
             <input type="text" placeholder="Mailing Address" name="mailingaddress" id="mailingaddress" required>
 
