--- a/client/registration.html
+++ b/client/registration.html
@@ -17,9 +17,11 @@
             
             <input type="password" placeholder="Confirm Password" name="confirm" id="confirm" required>
 
-            <input type="text" placeholder = "First Name" name="fname" id="fname" required>
+            <input type="text" placeholder = "Full Name" name="fullname" id="fullname" required>
 
-            <input type="text" placeholder = "Last Name" name = "lname" id = "lname" required>
+            <input type="text" placeholder = "johndoe@gmail.com" name = "email" id = "email" required>
+
+            <input type="text" placeholder = "Phone Number" name = "phonenumber" id = "phonenumber" required>
 
             <input type="text" placeholder="Mailing Address" name="mailingaddress" id="mailingaddress" required>
 
@@ -52,8 +54,15 @@
                 alert("Password created successfully")
                 return true;
             }  
-        }  
-        
+        }
+    </script>  
+
+    <script>
+        function postUser(){
+
+        }
+    </script>
+        <script>
         /*
         function matchPassword() {  
             var pw1 = document.getElementById("password").value 
@@ -83,6 +92,7 @@
             }).then((res)=> res.json())
         }
         */
-    </script>
+       </script>
+   
 </body>
 </html>
