--- a/client/login.html
+++ b/client/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
         <hr>
         <p>New user? Sign up <a href="registration"> here</a>.</p>
         
-        <p><i><a href="#">Forget your password?</a></i></p>
+        <!--<p><i><a href="#">Forget your password?</a></i></p>-->
         
         <button type="submit" id="loginbtn" >Login</button>
       </form>
